--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -4,8 +4,189 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        body {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+
+        table {
+            width: 500px;
+            border-collapse: collapse;
+        }
+
+        td, th {
+            border: 1px solid blue;
+            padding: 10px;
+        }
+
+        thead, tfoot {
+            background-color: #4242f893;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Uso de tabelas grandes</h1>
+    <!-- 
+        ANATOMIA PARA TABELAS GRANDES
+        TABLE
+            THEAD
+                TR, TD, TH
+            TBODY
+                TR, TD, TH
+            TFOOT
+                TR, TD, TH
+    -->
+    <table>
+        <thead>
+            <tr>
+                <th>Estado</th>
+                <th>População</th>
+                <th>% da População total</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>São Paulo</td>
+                <td>45.919.049</td>
+                <td>21,9%</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td>21.168.791</td>
+                <td>10,1%</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td>17.2964.943</td>
+                <td>8,2%</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td>14.873.064</td>
+                <td>7,1%</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td>11.433.957</td>
+                <td>5.4%</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td>11.377.239</td>
+                <td>5,4%</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td>9.557.071</td>
+                <td>4,5%</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td>9.132.078</td>
+                <td>4,3%</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td>8.602.865</td>
+                <td>4,1%</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td>7.164.788</td>
+                <td>3,4%</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td>7.075.181</td>
+                <td>3,4%</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td>7.018.354</td>
+                <td>3,3%</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td>4.144.597</td>
+                <td>2%</td>
+            </tr>
+            <tr>
+                <td>Espirito Santo</td>
+                <td>4.018.650</td>
+                <td>1,9%</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td>4.018.127</td>
+                <td>1,9%</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td>3.506.853</td>
+                <td>1,7%</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td>3.484.466</td>
+                <td>1,7%</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td>3.337.357</td>
+                <td>1,6%</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td>3.273.227</td>
+                <td>1,6%</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <Td>3.015.268</Td>
+                <td>1,7%</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso Do Sul</td>
+                <td>2.778.986</td>
+                <td>1,3%</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td>2.298.696</td>
+                <td>1,1%</td>
+            </tr>
+            <tr>
+                <td>Rondonia</td>
+                <td>1.777.225</td>
+                <td>0,8%</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td>1.572.866</td>
+                <td>0,7%</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td>881.935</td>
+                <td>0,4%</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td>845.731</td>
+                <td>0,4%</td>
+            </tr>
+            <tr>
+                <td>Roráima</td>
+                <td>605.761</td>
+                <td>0,3%</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>Total de Habitantes</th>
+                <td><strong>210.147.125</strong></td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
