--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -19,9 +20,32 @@
             padding: 10px;
         }
 
-        thead, tfoot {
-            background-color: #4242f893;
+        thead {
+            position: sticky;
+            top: -1.5px;
+            background-color: #4242f8;
         }
+        thead, tfoot {
+            background-color: #4242f8;
+        }
+
+        .num {
+            text-align: right;
+        }
+
+        caption {
+            font-size: 2em;
+            font-weight: bold;
+            padding: 8px;
+            background-color: #bbd1ffcc;
+            border: 1px solid blue;
+            border-collapse: collapse;
+        }
+
+        tbody > tr:nth-child(2n) {
+            background-color: #e2f0fd;
+        }
+            
     </style>
 </head>
 <body>
@@ -37,156 +61,164 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
-                <th>% da População total</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
+                <th scope="col" style="width: 50px;">% da População total</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td>45.919.049</td>
-                <td>21,9%</td>
+                <td class="num">45.919.049</td>
+                <td class="num">21,9%</td>
             </tr>
             <tr>
                 <td>Minas Gerais</td>
-                <td>21.168.791</td>
-                <td>10,1%</td>
+                <td class="num">21.168.791</td>
+                <td class="num">10,1%</td>
             </tr>
             <tr>
                 <td>Rio de Janeiro</td>
-                <td>17.2964.943</td>
-                <td>8,2%</td>
+                <td class="num">17.2964.943</td>
+                <td class="num">8,2%</td>
             </tr>
             <tr>
                 <td>Bahia</td>
-                <td>14.873.064</td>
-                <td>7,1%</td>
+                <td class="num">14.873.064</td>
+                <td class="num">7,1%</td>
             </tr>
             <tr>
                 <td>Paraná</td>
-                <td>11.433.957</td>
-                <td>5.4%</td>
+                <td class="num">11.433.957</td>
+                <td class="num">5.4%</td>
             </tr>
             <tr>
                 <td>Rio Grande do Sul</td>
-                <td>11.377.239</td>
-                <td>5,4%</td>
+                <td class="num">11.377.239</td>
+                <td class="num">5,4%</td>
             </tr>
             <tr>
                 <td>Pernambuco</td>
-                <td>9.557.071</td>
-                <td>4,5%</td>
+                <td class="num">9.557.071</td>
+                <td class="num">4,5%</td>
             </tr>
             <tr>
                 <td>Ceará</td>
-                <td>9.132.078</td>
-                <td>4,3%</td>
+                <td class="num">9.132.078</td>
+                <td class="num">4,3%</td>
             </tr>
             <tr>
                 <td>Pará</td>
-                <td>8.602.865</td>
-                <td>4,1%</td>
+                <td class="num">8.602.865</td>
+                <td class="num">4,1%</td>
             </tr>
             <tr>
                 <td>Santa Catarina</td>
-                <td>7.164.788</td>
-                <td>3,4%</td>
+                <td class="num">7.164.788</td>
+                <td class="num">3,4%</td>
             </tr>
             <tr>
                 <td>Maranhão</td>
-                <td>7.075.181</td>
-                <td>3,4%</td>
+                <td class="num">7.075.181</td>
+                <td class="num">3,4%</td>
             </tr>
             <tr>
                 <td>Goiás</td>
-                <td>7.018.354</td>
-                <td>3,3%</td>
+                <td class="num">7.018.354</td>
+                <td class="num">3,3%</td>
             </tr>
             <tr>
                 <td>Amazonas</td>
-                <td>4.144.597</td>
-                <td>2%</td>
+                <td class="num">4.144.597</td>
+                <td class="num">2%</td>
             </tr>
             <tr>
                 <td>Espirito Santo</td>
-                <td>4.018.650</td>
-                <td>1,9%</td>
+                <td class="num">4.018.650</td>
+                <td class="num">1,9%</td>
             </tr>
             <tr>
                 <td>Paraíba</td>
-                <td>4.018.127</td>
-                <td>1,9%</td>
+                <td class="num">4.018.127</td>
+                <td class="num">1,9%</td>
             </tr>
             <tr>
                 <td>Rio Grande do Norte</td>
-                <td>3.506.853</td>
-                <td>1,7%</td>
+                <td class="num">3.506.853</td>
+                <td class="num">1,7%</td>
             </tr>
             <tr>
                 <td>Mato Grosso</td>
-                <td>3.484.466</td>
-                <td>1,7%</td>
+                <td class="num">3.484.466</td>
+                <td class="num">1,7%</td>
             </tr>
             <tr>
                 <td>Alagoas</td>
-                <td>3.337.357</td>
-                <td>1,6%</td>
+                <td class="num">3.337.357</td>
+                <td class="num">1,6%</td>
             </tr>
             <tr>
                 <td>Piauí</td>
-                <td>3.273.227</td>
-                <td>1,6%</td>
+                <td class="num">3.273.227</td>
+                <td class="num">1,6%</td>
             </tr>
             <tr>
                 <td>Distrito Federal</td>
-                <Td>3.015.268</Td>
-                <td>1,7%</td>
+                <Td class="num">3.015.268</Td>
+                <td class="num">1,7%</td>
             </tr>
             <tr>
                 <td>Mato Grosso Do Sul</td>
-                <td>2.778.986</td>
-                <td>1,3%</td>
+                <td class="num">2.778.986</td>
+                <td class="num">1,3%</td>
             </tr>
             <tr>
                 <td>Sergipe</td>
-                <td>2.298.696</td>
-                <td>1,1%</td>
+                <td class="num">2.298.696</td>
+                <td class="num">1,1%</td>
             </tr>
             <tr>
                 <td>Rondonia</td>
-                <td>1.777.225</td>
-                <td>0,8%</td>
+                <td class="num">1.777.225</td>
+                <td class="num">0,8%</td>
             </tr>
             <tr>
                 <td>Tocantins</td>
-                <td>1.572.866</td>
-                <td>0,7%</td>
+                <td class="num">1.572.866</td>
+                <td class="num">0,7%</td>
             </tr>
             <tr>
                 <td>Acre</td>
-                <td>881.935</td>
-                <td>0,4%</td>
+                <td class="num">881.935</td>
+                <td class="num">0,4%</td>
             </tr>
             <tr>
                 <td>Amapá</td>
-                <td>845.731</td>
-                <td>0,4%</td>
+                <td class="num">845.731</td>
+                <td class="num">0,4%</td>
             </tr>
             <tr>
                 <td>Roráima</td>
-                <td>605.761</td>
-                <td>0,3%</td>
+                <td class="num">605.761</td>
+                <td class="num">0,3%</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td><strong>210.147.125</strong></td>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num" colspan="2"><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus ducimus quia, qui deleniti iure dicta beatae accusamus aliquam perspiciatis accusantium est dolorum sed ipsa quaerat, tempore amet optio aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At modi nulla error nemo. Perferendis molestiae, possimus porro aliquid eligendi omnis nam doloribus illum! Unde deserunt praesentium soluta, ullam repudiandae ducimus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem tempora harum enim veritatis. Explicabo obcaecati expedita tempora praesentium, repellat ea earum facilis vel dolorum rem nobis minus? Ab, perferendis totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam iusto facere autem temporibus nostrum eaque non nemo dolore blanditiis, quam veritatis iure omnis sit error amet qui delectus tempora? Perspiciatis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut voluptates accusamus iste explicabo sint error, ipsam eos modi quae! Optio dolor et sint atque reiciendis excepturi quidem eaque, nostrum maxime! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, et cumque eligendi praesentium, vero omnis voluptatum obcaecati nihil nulla molestias excepturi veritatis aliquid deleniti dolorum ea voluptatibus dolore nesciunt distinctio.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus ducimus quia, qui deleniti iure dicta beatae accusamus aliquam perspiciatis accusantium est dolorum sed ipsa quaerat, tempore amet optio aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At modi nulla error nemo. Perferendis molestiae, possimus porro aliquid eligendi omnis nam doloribus illum! Unde deserunt praesentium soluta, ullam repudiandae ducimus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem tempora harum enim veritatis. Explicabo obcaecati expedita tempora praesentium, repellat ea earum facilis vel dolorum rem nobis minus? Ab, perferendis totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam iusto facere autem temporibus nostrum eaque non nemo dolore blanditiis, quam veritatis iure omnis sit error amet qui delectus tempora? Perspiciatis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut voluptates accusamus iste explicabo sint error, ipsam eos modi quae! Optio dolor et sint atque reiciendis excepturi quidem eaque, nostrum maxime! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, et cumque eligendi praesentium, vero omnis voluptatum obcaecati nihil nulla molestias excepturi veritatis aliquid deleniti dolorum ea voluptatibus dolore nesciunt distinctio.
+    
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus ducimus quia, qui deleniti iure dicta beatae accusamus aliquam perspiciatis accusantium est dolorum sed ipsa quaerat, tempore amet optio aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At modi nulla error nemo. Perferendis molestiae, possimus porro aliquid eligendi omnis nam doloribus illum! Unde deserunt praesentium soluta, ullam repudiandae ducimus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem tempora harum enim veritatis. Explicabo obcaecati expedita tempora praesentium, repellat ea earum facilis vel dolorum rem nobis minus? Ab, perferendis totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam iusto facere autem temporibus nostrum eaque non nemo dolore blanditiis, quam veritatis iure omnis sit error amet qui delectus tempora? Perspiciatis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut voluptates accusamus iste explicabo sint error, ipsam eos modi quae! Optio dolor et sint atque reiciendis excepturi quidem eaque, nostrum maxime! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, et cumque eligendi praesentium, vero omnis voluptatum obcaecati nihil nulla molestias excepturi veritatis aliquid deleniti dolorum ea voluptatibus dolore nesciunt distinctio.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus ducimus quia, qui deleniti iure dicta beatae accusamus aliquam perspiciatis accusantium est dolorum sed ipsa quaerat, tempore amet optio aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At modi nulla error nemo. Perferendis molestiae, possimus porro aliquid eligendi omnis nam doloribus illum! Unde deserunt praesentium soluta, ullam repudiandae ducimus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem tempora harum enim veritatis. Explicabo obcaecati expedita tempora praesentium, repellat ea earum facilis vel dolorum rem nobis minus? Ab, perferendis totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam iusto facere autem temporibus nostrum eaque non nemo dolore blanditiis, quam veritatis iure omnis sit error amet qui delectus tempora? Perspiciatis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut voluptates accusamus iste explicabo sint error, ipsam eos modi quae! Optio dolor et sint atque reiciendis excepturi quidem eaque, nostrum maxime! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, et cumque eligendi praesentium, vero omnis voluptatum obcaecati nihil nulla molestias excepturi veritatis aliquid deleniti dolorum ea voluptatibus dolore nesciunt distinctio.
+    </p>
 </body>
 </html>
