--- a/Exercicios/ex023/tabela004.html
+++ b/Exercicios/ex023/tabela004.html
@@ -28,22 +28,48 @@
             border: 1px solid #555555;
             padding: 5px;
         }
+
+        tfoot > tr > td {
+            text-align: right;
+        }
+
+        .col1 {
+            background-color: aqua;
+        }
+
+        .col2 {
+            background-color: aquamarine;
+        }
+
+        .col3 {
+            background-color: rgb(153, 255, 127);
+        }
+
+        .col4 {
+            background-color: rgb(112, 255, 99);
+        }
     </style>
 </head>
 <body>
     
     <table>
+        <colgroup>
+            <col class="col1">
+            <col class="col2">
+            <col class="col3" span="2">
+            <col class="col4">
+        </colgroup>
         <caption>Filmes Favoritos</caption>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -62,7 +88,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
@@ -81,6 +107,12 @@
                 <td>Toy Story</td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <td>23.023.434</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
